# rust-bazel-template

./: MODULE.bazel  README.md  WORKSPACE
config/: BUILD
config/vscode/: tasks.json
src/: BUILD  main.rs
