module(name="rust_template", version = "0.0.1")

bazel_dep(name = "rules_rust", version = "0.57.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.83.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "uuid",
    version = "1.13.1",
    features = ["v4"],
)
crate.from_specs()
use_repo(crate, "crates")
